@@ -1,3 +1,8 @@
+2009-01-05  Jesse van den Kieboom  <jesse@icecrew.nl>
+
+	* gtksourceview/gtksourceview.c: verticall align category mark pixbuf 
+	in the middle of the line (fixes #566408).
+
 2008-12-31  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/gtksourcecontextengine.c
